Adding Book and Bookshelf classes, with much left to do.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       android:versionCode="1"
       android:versionName="1.0" package="org.vinuxproject.bookwarp">
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name="org.vinuxproject.sonic.BookWarpUI"
                   android:label="@string/app_name">
@@ -10,6 +11,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="org.vinuxproject.sonic.Bookshelf" android:label=""></activity>
 
     </application>
     <uses-sdk android:minSdkVersion="8" />
